projects > image size fix , card border readius fix , hide horizantal scrollbar ---> Done ...

--- a/react-1-me/src/components/Main/Mainheader/Pagenavigartion/PageDetails/RequestType/requesttype.css
+++ b/react-1-me/src/components/Main/Mainheader/Pagenavigartion/PageDetails/RequestType/requesttype.css
@@ -84,7 +84,7 @@
     cursor: pointer;
     margin-bottom: 2rem;
     background-color: #FEFFFE;
-    border-radius: 0.8rem;
+    border-radius: 1rem;
     padding: 1.2rem;
     border: 2px solid #F3F3F3;
 }
